Fixed city names in dark mode city selector be dark mode compatible

--- a/src/index.less
+++ b/src/index.less
@@ -919,11 +919,12 @@ a.globButton {
       list-style: none;
       font-size : 12px;
       margin-top: 5px;
+      color:var(--primary-text);
 
       input[type=checkbox] {
         display     : block;
         float       : left;
-        margin-right: 5px;
+        margin-right: @gap;
       }
     }
 
